test/invalid/baseline/Int32-keyword.txt
Syntax error at line 1 in Int32-keyword.webidl:
interface Int32Array {};
          ^ Missing name in interface
